adding Scheduler