@@ -21,7 +21,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class ReservationServiceImpl implements ReservationService {
@@ -57,7 +56,7 @@ public class ReservationServiceImpl implements ReservationService {
                                 }).toList();
                     }).toList()
                     .stream().flatMap(List::stream)
-                    .collect(Collectors.toList());
+                    .toList();
 
             reservationRepository.saveAll(list);
         }
@@ -80,14 +79,55 @@ public class ReservationServiceImpl implements ReservationService {
         Optional<Reservation> reservation = reservationRepository.findById(reservationId);
         Optional<UserEntity> userByEmail = userService.findUserByEmail(userEmail);
 
-        if (reservation.isPresent() && userByEmail.isPresent()){
+        if (reservation.isPresent() && userByEmail.isPresent()) {
             Reservation updatedReservation = reservation.get().setUser(userByEmail.get());
             reservationRepository.save(updatedReservation);
         }
 
     }
 
+    @Override
+    public int createReservationForActiveRestaurantsForDate(LocalDate date) {
+
+        List<Restaurant> allActiveRestaurants = restaurantRepository.findAllByIsActiveIs(true);
+        List<ReservationEnums> values = Arrays.stream(ReservationEnums.values()).toList();
+        List<Reservation> collectionOfReservations =
+                createListOfReservations(allActiveRestaurants, date, values);
+
+        List<Reservation> alreadyCreatedReservations = allActiveRestaurants.stream()
+                .map(restaurant -> {
+                    return reservationRepository.findAllByDateIsAndTable_Restaurant_Id(date, restaurant.getId());
+                }).toList()
+                .stream().flatMap(List::stream)
+                .toList();
+        ;
+
+        List<Reservation> reservationsToSave = collectionOfReservations.stream()
+                .filter(x -> !alreadyCreatedReservations.contains(x))
+                .toList();
+
+        reservationRepository.saveAll(reservationsToSave);
+        return reservationsToSave.size();
+    }
+
     private List<Reservation> checkForReservation(LocalDate date) {
         return reservationRepository.findAllByDateIs(date).orElse(new ArrayList<>());
+    }
+
+    private List<Reservation> createListOfReservations(List<Restaurant> allActiveRestaurants,
+                                                       LocalDate date,
+                                                       List<ReservationEnums> values) {
+        return allActiveRestaurants.stream()
+                .map(Restaurant::getTableEntities)
+                .flatMap(List::stream)
+                .map(table -> {
+                    return values.stream()
+                            .map(reservationEnums -> {
+                                return new Reservation().setDate(date).setTable(table).setReservations(reservationEnums);
+
+                            }).toList();
+                }).toList()
+                .stream().flatMap(List::stream)
+                .toList();
     }
 }
